fix the dark mode and light mode

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -23,6 +23,10 @@
       color: white;
     }
 
+    .mycolor1 {
+      color: white;
+    }
+
     .main_heading {
       color: #fff2c1;
     }
@@ -73,8 +77,17 @@
       border-color: #9e4ceb;
     }
 
+    .button_background_color {
+      background-color: #9e4ceb;
+      color: white;
+    }
+
     .sec_heading {
       font-weight: 400;
+      color: black;
+    }
+
+    .mycolor1 {
       color: black;
     }
 
